# RcppORtools

./: .Rbuildignore  .gitignore  .travis.yml  DESCRIPTION  NAMESPACE  README.md  cleanup  configure  configure.ac
R/: RcppExports.R  RcppORtools-package.R  StiglerDiet.R  zzz.R
data/: StiglerDiet.RData
data-raw/: StiglerDiet.Rmd  tsplib.Rmd
inst/include/: RcppORtools.h
man/: RcppORtools.Rd  StiglerDiet.Rd  glop_lp.Rd  orToolsVersion.Rd  singleVisitorTSP.Rd  solveMultiKnapsackProblem.Rd
src/: .gitignore  Makevars  Makevars.in  ORtoolsVersion.cpp  RcppExports.cpp  glop.cpp  mat2stdVecVec.h  singleVisitorTSP.cpp  solveKnapsack.cpp
tests/: testthat.R
tests/testthat/: test-ORtoolsVersion.R  test-classicTSP.R  test-glop.R  test-knapsack.R  test-matrixToStdVecVec.R
vignettes/: fantasty-football.Rmd
